--- a/.gitignore
+++ b/.gitignore
@@ -309,6 +309,7 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/**
 # !tools/packages.config
+.vscode/
 
 # Tabs Studio
 *.tss
@@ -348,3 +349,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+
