--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore BlazorAppTest
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build BlazorAppTest --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
