--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build
       run: dotnet build BlazorAppTest --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test BlazorAppTest --no-build --verbosity normal
